--- a/.github/workflows/change-redirect-url.yaml
+++ b/.github/workflows/change-redirect-url.yaml
@@ -1,4 +1,4 @@
-name: Update index.html every 5 minutes
+name: Update index.html every 1 minutes
 
 on:
   schedule:
@@ -13,8 +13,8 @@ jobs:
 
       - name: Git config
         run: |
-          git config --global user.name "update-inflnigate"
-          git config --global user.email "update@inflnigate.com"
+          git config --local user.name "update-inflnigate"
+          git config --local user.email "update@inflnigate.com"
 
       - name: Read URLs from file
         run: |
