--- a/.github/workflows/change-redirect-url.yaml
+++ b/.github/workflows/change-redirect-url.yaml
@@ -28,8 +28,8 @@ jobs:
           if git diff-index --quiet HEAD --; then
             echo "No changes to commit"
           else
-            git config --local user.name "${GITHUB_ACTOR}"
-            git config --local user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+            git config --local user.name "update-inflnigate"
+            git config --local user.email "update@inflnigate.com"
             git add index.html
             git commit -m "Update redirect-url in index.html"
             
