--- a/.github/workflows/change-redirect-url.yaml
+++ b/.github/workflows/change-redirect-url.yaml
@@ -1,4 +1,4 @@
-name: Update index.html every 1 minutes
+name: Update index.html every 5 minutes
 
 on:
   schedule:
@@ -15,7 +15,6 @@ jobs:
         run: |
           # Replace with your script to read urls.txt into a variable
           urls=$(cat urls.txt)
-
       - name: Update index.html
         run: |
           # Replace with your script to update index.html
@@ -23,20 +22,8 @@ jobs:
           original_url=$(grep -o 'url=[^"]*' index.html | cut -d '=' -f 2)
           new_url=$(echo "$urls" | shuf -n 1)  # Select a random URL from the list
           sed -i "s|url=$original_url|url=$new_url|g" index.html
-          # Commit and push changes if there are modifications
-          # Check if there are changes to commit
-          if git diff-index --quiet HEAD --; then
-            echo "No changes to commit"
-          else
-            git config --local user.name "update-inflnigate"
-            git config --local user.email "update@inflnigate.com"
-            git add index.html
-            git commit -m "Update redirect-url in index.html"
-            
-            # Fetch changes from remote before pushing
-            git fetch
-            git rebase origin/main
-            
-            # Push changes
-            git push --set-upstream origin main
-          fi
+          git config --local user.name "update-inflnigate"
+          git config --local user.email "update@inflnigate.com"
+          git add index.html
+          git commit -m "Updated redirect-url in index.html"
+          git push
