--- a/.github/workflows/change-redirect-url.yaml
+++ b/.github/workflows/change-redirect-url.yaml
@@ -1,8 +1,8 @@
-name: Update index.html every 1 minutes
+name: Update index.html every 5 minutes
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Runs every 1 minutes
+    - cron: '5 * * * *'  # Runs every 5 minutes
 
 jobs:
   update-html:
