--- a/.github/workflows/change-redirect-url.yaml
+++ b/.github/workflows/change-redirect-url.yaml
@@ -2,7 +2,7 @@ name: Update index.html every 5 minutes
 
 on:
   schedule:
-    - cron: '5 * * * *'  # Runs every 5 minutes
+    - cron: '*/5 * * * *'  # Runs every 5 minutes
 
 jobs:
   update-html:
